--- a/very new/index.html
+++ b/very new/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>index</title>
-<link rel="Shortcut Icon" href="images/icon.ico">
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,6 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   <li><a href="product.html">Product</a></li>
 				   <li><a href="about.html">About</a></li>
 				   <li><a href="signup.html">Signup</a></li>
+                   <li><a href="shoppingchrt.html">Shopping Chrt</a></li>
 				  </ul>
 				</div>
 							<!-- script for menu -->
