--- a/very new/index.html
+++ b/very new/index.html
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<p style="margin-bottom: 20px">On Discount</p>
                         
 						<div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
                         </div>
                         
                         <div class="col-md-2">
