--- a/very new/product.html
+++ b/very new/product.html
@@ -10,9 +10,9 @@
 <meta name="keywords" content="Campaign Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <script src="js/jquery-1.11.1.min.js"></script>
 <!---- start-smoth-scrolling---->
 <script type="text/javascript" src="js/move-top.js"></script>
@@ -39,6 +39,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 	<div class="header">
 		<div class="container">
+		<div class="lo">
+        <img src="images/logo.png" alt="/">
+        </div>
 		<div class="header-top">
 			<div class="logo">
 				<a href="index.html">Painting Art</a>
@@ -75,7 +78,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="accommodation-grids">
 
 <div class="col-md-4 accommodation-grid">
-<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+<img src="images/abstract/1.jpg" class="img-responsive-p" alt="/">
 <div class="accommodation-info">
 <a><p>Name<br>Discription<br>Price</p>
 </a>  
@@ -83,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 <div class="col-md-4 accommodation-grid">
-<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+<img src="images/abstract/1.jpg" class="img-responsive-p" alt="/">
 <div class="accommodation-info">
 <a><p>Name<br>Discription<br>Price</p>
 </a>  
@@ -91,7 +94,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 <div class="col-md-4 accommodation-grid">
-<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+<img src="images/abstract/1.jpg" class="img-responsive-p" alt="/">
 <div class="accommodation-info">
 <a><p>Name<br>Discription<br>Price</p>
 </a>  
@@ -99,7 +102,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 <div class="col-md-4 accommodation-grid">
-<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+<img src="images/abstract/1.jpg" class="img-responsive-p" alt="/">
 <div class="accommodation-info">
 <a><p>Name<br>Discription<br>Price</p>
 </a>  
@@ -107,7 +110,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 <div class="col-md-4 accommodation-grid">
-<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+<img src="images/abstract/1.jpg" class="img-responsive-p" alt="/">
 <div class="accommodation-info">
 <a><p>Name<br>Discription<br>Price</p>
 </a>  
@@ -115,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 
 <div class="col-md-4 accommodation-grid">
-<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+<img src="images/abstract/1.jpg" class="img-responsive-p" alt="/">
 <div class="accommodation-info">
 <a><p>Name<br>Discription<br>Price</p>
 </a>  
