--- a/very new/shoppingcart.html
+++ b/very new/shoppingcart.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Flash Registration Form  Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/myjs.js"></script>
 </head>
 
 <script src="js/jquery-1.11.1.min.js"></script>
