--- a/very new/about.html
+++ b/very new/about.html
@@ -73,21 +73,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="banner-bottom">
 				 <div class="banner-grids">
 					<div class="col-md-7 right-grid">
-						 <h3>About NZ Painting</h3>
-							<p align="justify">NZ Painting was established in 1904 with the dream in mind of being able to supply high quality artworks at an affordable price to the public. Currently, our artworks being displayed in over 150 local cafes, restaurants, and show homes around New Zealand. Our dream is to make these beautiful works of art to everyone not only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p>
+						 <h3 style="font-family: Constantia, 'Lucida Bright', 'DejaVu Serif', Georgia, serif">ABOUT NZ PAINTING CREATIONS STUDIO</h3>
+							<p style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif; font-size:16px; margin-bottom:20px" align="justify">NZ Painting was established in 1904 with the dream in mind of being able to supply high quality artworks at an affordable price to the public. Currently, our artworks being displayed in over 150 local cafes, restaurants, and show homes around New Zealand. Our dream is to make these beautiful works of art to everyone nots only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p>
 					</div>
 						<div class="clearfix"></div>
 				</div>
 			</div>
-<div class="about-section" id="about">
-				<div>
+<div style="padding-left:290px">
+				<div class="about-section" id="about" style="float:left">
 				<h3>Our Company</h3>
-				<p>the landing in</p>
-				<p>1234 city Road ,City Name</p>
-				<p>+1534 432 123</p>
-				<p>contact@companyname.lo</p>
+				<p>Unitec Institute of Technology</p>
+				<p>139 Carrington Rd,<br> Mount Albert, Auckland</p>
+				<p>09-815 4321</p>
+				<p>Unitec@gmail.com</p>
 				</div>
-              				<div id="map" style="margin-left:450px; width:800px;height:400px;background:yellow"></div>
+              				<div id="map" style="margin-left:570px; margin-top:60px; margin-bottom:50px; width:450px;height:400px;background:yellow"></div>
               				<script>
 								function myMap() {
 									var mapOptions = {
