--- a/very new/shoppingcart.html
+++ b/very new/shoppingcart.html
@@ -1,146 +1,130 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Shopping Cart</title>
-<link href="css/shopstyle.css" rel="stylesheet" type="text/css" media="all"/>
+<title>index</title>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Flash Registration Form  Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-</head>
-
+<meta name="keywords" content="Campaign Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <script src="js/jquery-1.11.1.min.js"></script>
-<script>$(document).ready(function(c) {
-	$('.close').on('click', function(c){
-		$('.product-section').fadeOut('slow', function(c){
-	  		$('.product-section').remove();
+<!---- start-smoth-scrolling---->
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="js/SignupScript.js"></script>
+ <script type="text/javascript">
+		jQuery(document).ready(function($) {
+			$(".scroll").click(function(event){
+				event.preventDefault();
+				$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
+			});
 		});
-	});
-});
-</script>
-<script>$(document).ready(function(c) {
-	$('.close1').on('click', function(c){
-		$('.product1').fadeOut('slow', function(c){
-	  		$('.product1').remove();
-		});
-	});
-});
-</script>
-<script>$(document).ready(function(c) {
-	$('.close2').on('click', function(c){
-		$('.product2').fadeOut('slow', function(c){
-	  		$('.product2').remove();
-		});
-	});
-});
-</script>
-<body>
-		<!---header--->
-		<div class="header">
-			<h1>Products In Cart</h1>
-		</div>
-		<!---header--->
-		<!---main--->
-			<div class="main">
-				<div class="main-section">
-					<div class="product-section">
-						<div class="product-top">
-							<div class="product-left">
-								<img src="images/p1.jpg">
-							</div>
-							<div class="product-right">
-								<h2>Lorem ipsum dolor sit amet</h2>
-									<h5>Adispree White Running Shoes</h5>
-									<ul class="size">
-										<li>Size 7</li>
-										<li>Qty 1</li>
-									</ul>
-							</div>
-						</div>
-						<div class="product-middle">
-							<select class="sel">
-								<option value="">1</option>
-								<option value="">2</option>
-								<option value="">3</option>
-								<option value="">4</option>
-								<option value="">5</option>
-							</select>
-						</div>
-						<div class="product-right1">
-							<p>$029,10<p>
-							<div class="close"> </div>
-						</div>
-						<div class="clear"></div>
-					</div>
-				<div class="product1">
-						<div class="product-top">
-							<div class="product-left">
-								<img src="images/p2.jpg">
-							</div>
-							<div class="product-right">
-								<h2>Lorem ipsum dolor sit amet</h2>
-									<h5>Adispree Color Watch</h5>
-									<ul class="size">
-										<li>Size 8</li>
-										<li>Qty 1</li>
-									</ul>
-							</div>
-						</div>
-						<div class="product-middle">
-							<select class="sel">
-								<option value="">1</option>
-								<option value="">2</option>
-								<option value="">3</option>
-								<option value="">4</option>
-								<option value="">5</option>
-							</select>
-						</div>
-						<div class="product-right1">
-							<p>$019,10<p>
-							<div class="close1"> </div>
-						</div>
-						<div class="clear"></div>
-					</div>
-					<div class="product2">
-						<div class="product-top">
-							<div class="product-left">
-								<img src="images/p3.jpg">
-							</div>
-							<div class="product-right">
-								<h2>Lorem ipsum dolor sit amet</h2>
-									<h5>Adispree Hand Bag</h5>
-									<ul class="size">
-										<li>Size 9</li>
-										<li>Qty 1</li>
-									</ul>
-							</div>
-						</div>
-						<div class="product-middle">
-							<select class="sel">
-								<option value="">1</option>
-								<option value="">2</option>
-								<option value="">3</option>
-								<option value="">4</option>
-								<option value="">5</option>
-							</select>
-						</div>
-						<div class="product-right1">
-							<p>$009,10<p>
-							<div class="close2"> </div>
-						</div>
-						<div class="clear"></div>
-					</div>
-					<div class="product-bottom">
-						<h3>summary : <span> $50,30</h3>
-						<a href="#">Checkout</a>
-						<div class="clear">
-					</div>
-				</div>
-			</div>
-			<div class="footer">
-			<p>&copy 2016 Products In Cart . All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-		</div>
+	</script>
+<!---End-smoth-scrolling---->
+<link rel="stylesheet" href="css/swipebox.css">
+			<script src="js/jquery.swipebox.min.js"></script>
+			    <script type="text/javascript">
+					jQuery(function($) {
+						$(".swipebox").swipebox();
+					});
+				</script>
 
-		<!---main--->
+</head>
+<body>
+	<div class="header">
+		<div class="container">
+		<div class="lo">
+        <img src="images/logo.png" alt="/">
+        </div>
+		<div class="header-top">
+			<div class="logo">
+			<a href="index.html">Painting Art</a>
+			</div>
+				<div class="top-menu">
+				  <span class="menu"><img src="images/nav.png" alt=""/></span>
+				  <ul>
+				   <li><a href="index.html">Home</a></li>
+				   <li><a href="product.html">Product</a></li>
+				   <li><a href="about.html">About</a></li>
+				   <li><a href="signup.html">Signup</a></li>
+          <li><a href="shoppingcart.html">Shopping Cart</a></li>
+				  </ul>
+				</div>
+							<!-- script for menu -->
+							<script>
+							 $("span.menu").click(function(){
+							 $(".top-menu ul").slideToggle("slow" , function(){
+							 });
+							 });
+							 </script>
+							<!-- //script for menu -->
+					<div class="clearfix"></div>
+			 </div>
+
+		</div>
+	</div>
+
+
+
+
+
+
+
+						<!----sreen-gallery-cursual---->
+						<div class="sreen-gallery-cursual">
+							 <!-- requried-jsfiles-for owl -->
+							<link href="css/owl.carousel.css" rel="stylesheet">
+					      <script src="js/owl.carousel.js"></script>
+				          <script>
+							    $(document).ready(function() {
+							      $("#owl-demo").owlCarousel({
+							        items : 1,
+							        lazyLoad : true,
+							        autoPlay : true,
+							        navigation : false,
+							        navigationText :  false,
+							        pagination : true,
+							      });
+							    });
+							    </script>
+							 <!-- //requried-jsfiles-for owl -->
+					</div>
+
+
+
+
+
+
+<div class="footer-section">
+						<div class="container">
+							<div class="footer-top">
+								</div>
+								<div class="footer-bottom">
+						<p>Copyright &copy; 2017 ANGEL ART CREATIONS PAINTING STUDIO</p>
+									</div>
+							<script type="text/javascript">
+						$(document).ready(function() {
+							/*
+							var defaults = {
+					  			containerID: 'toTop', // fading element id
+								containerHoverID: 'toTopHover', // fading element hover id
+								scrollSpeed: 1200,
+								easingType: 'linear'
+					 		};
+							*/
+
+							$().UItoTop({ easingType: 'easeOutQuart' });
+
+						});
+					</script>
+				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+				</div>
+	</div>
+
 </body>
 </html>
