--- a/very new/about.html
+++ b/very new/about.html
@@ -7,7 +7,7 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Campaign Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+<meta name="keywords" content="Campaign Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
@@ -20,7 +20,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="js/SignupScript.js"></script>
  <script type="text/javascript">
 		jQuery(document).ready(function($) {
-			$(".scroll").click(function(event){		
+			$(".scroll").click(function(event){
 				event.preventDefault();
 				$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
 			});
@@ -28,7 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</script>
 <!---End-smoth-scrolling---->
 <link rel="stylesheet" href="css/swipebox.css">
-			<script src="js/jquery.swipebox.min.js"></script> 
+			<script src="js/jquery.swipebox.min.js"></script>
 			    <script type="text/javascript">
 					jQuery(function($) {
 						$(".swipebox").swipebox();
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   <li><a href="product.html">Product</a></li>
 				   <li><a href="about.html">About</a></li>
 				   <li><a href="signup.html">Signup</a></li>
-                   <li><a href="shoppingchrt.html">Shopping Chrt</a></li>
+            <li><a href="shoppingcart.html">Shopping Cart</a></li>
 				  </ul>
 				</div>
 							<!-- script for menu -->
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 		</div>
 	</div>
-	
+
 <div id="content">
 			<div class="banner-bottom">
 				 <div class="banner-grids">
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</script>
 
 							<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5AcnFjVcsEgrN7X3XtOeUM2ZTPy4KZXw&callback=myMap"></script>
-</div>	
+</div>
 </div>
 
 <div class="footer-section">
@@ -117,16 +117,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  			containerID: 'toTop', // fading element id
 								containerHoverID: 'toTopHover', // fading element hover id
 								scrollSpeed: 1200,
-								easingType: 'linear' 
+								easingType: 'linear'
 					 		};
 							*/
-							
+
 							$().UItoTop({ easingType: 'easeOutQuart' });
-							
+
 						});
 					</script>
 				<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 				</div>
 	</div>
 	</body>
-</html> 
+</html>
