--- a/very new/index.html
+++ b/very new/index.html
@@ -73,8 +73,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-bottom">
 <div class="banner-grids">
 <div class="col-md-7 right-grid">
-<h3>Welcome to the ANGEL ART CREATIONS PAINTING STUDIO</h3>
-<p align="justify">NZ Painting was established in 1904 with the dream in mind of being able to supply high quality artworks at an affordable price to the public. Currently, our artworks being displayed in over 150 local cafes, restaurants, and show homes around New Zealand. Our dream is to make these beautiful works of art to everyone not only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p>
+<h3>Welcome to NZ PAINTING CREATIONS STUDIO</h3>
+<!-- <p align="justify">NZ Painting was established in 1904 with the dream in mind of being able to supply high quality artworks at an affordable price to the public. Currently, our artworks being displayed in over 150 local cafes, restaurants, and show homes around New Zealand. Our dream is to make these beautiful works of art to everyone not only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p> -->
+<p>Each single artwork is a masterpiece. </p><p>Our dream is to make these beautiful works of art to everyone not only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p>
 </div>
 <div class="clearfix"></div>
 </div>
@@ -85,8 +86,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div>
 						<p style="margin-bottom: 20px">On Discount</p>
 
-						<div class="col-md-2">
-						<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+						<div class="col-md-2" style="border:1px solid black  >
+
+            						<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
@@ -168,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="footer-top">
 								</div>
 								<div class="footer-bottom">
-						<p>Copyright &copy; 2017 ANGEL ART CREATIONS PAINTING STUDIO</p>
+						<p>Copyright &copy; 2017 NZ PAINTING CREATIONS STUDIO</p>
 									</div>
 							<script type="text/javascript">
 						$(document).ready(function() {
