--- a/very new/index.html
+++ b/very new/index.html
@@ -86,47 +86,50 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div>
 						<p style="margin-bottom: 20px">On Discount</p>
 
-						<div class="col-md-2" style="border:1px solid black  >
 
-            						<img src="images/abstract/1.jpg" class="img-responsive" alt="/">
+						<div class="col-md-2" >
+
+            <img src="images\art\dis\2g.jpg" class="img-responsive" alt="a">
+            <p style="font-size:17px" class="text-center"><a href="product.html"><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p>
+
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images\art\dis\7g.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images\art\dis\16g.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images\art\dis\20g.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images\art\dis\30g.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <p style="margin-bottom: 20px">Most Popular</p>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images/art/20.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images/art/22.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images/art/24.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images/art/27.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/e1.jpg" class="img-responsive" alt="/">
+						<img src="images/art/30.jpg" class="img-responsive" alt="/">
                         </div>
 
 
