--- a/very new/shoppingcart.html
+++ b/very new/shoppingcart.html
@@ -73,37 +73,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
     <div>
         <div class="carttitle" style="border:1px solid black">
-        <p>Shopping Cart</p>
-        <table class="table table-striped mytable">
-          <caption>条纹表格布局</caption>
-          <div>
+        <p >Shopping Cart</p>
+        </div>
+        <div class = "mytable" id="line1">
+            <div id="tableTitle">
+              <div id="tableTitle1" class="col-md-3">piture</div>
+              <div id="tableTitle1" class="col-md-3">Name</div>
+              <div id="tableTitle2" class="col-md-3">Quantity</div>
+              <div id="tableTitle3" class="col-md-3">Price</div>
+            </div>
+            <div id="tableLine0">
+              <div id="l0d1" class="col-md-2">piture</div>
+              <div id="tableTitle1" class="col-md-2">Name</div>
+              <div id="tableTitle2" class="col-md-2">Quantity</div>
+              <div id="tableTitle3" class="col-md-2">Price</div>
+            </div>
+        </div>
+        <div class="total">
+          <p>Total Price:<label id="total"></label></p>
 
-          </div>
-          <thead>
-            <tr>
-              <th>名称</th>
-              <th>城市</th>
-              <th>邮编</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Tanmay</td>
-              <td>Bangalore</td>
-              <td>560001</td>
-            </tr>
-            <tr>
-              <td>Sachin</td>
-              <td>Mumbai</td>
-              <td>400003</td>
-            </tr>
-            <tr>
-              <td>Uma</td>
-              <td>Pune</td>
-              <td>411027</td>
-            </tr>
-          </tbody>
-        </table>
         </div>
 							<!-- script for menu -->
 
