--- a/very new/index.html
+++ b/very new/index.html
@@ -69,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 
-<div class="content">
+<div class="content" >
 <div class="banner-bottom">
 <div class="banner-grids">
 <div class="col-md-7 right-grid">
@@ -81,16 +81,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 </div>
 </div>
-<div class="about-section" id="about">
-					<div class="container">
-						<div>
-						<p style="margin-bottom: 20px">On Discount</p>
+<div class="about-section" "container" id="about" style="border:1px solid black">
+
+            <div class="title" >
+	            <p style="margin-bottom: 20px">On Discount</p>
+
+            </div>
+
 
 
 						<div class="col-md-2" >
 
             <img src="images\art\dis\2g.jpg" class="img-responsive" alt="a">
-            <p style="font-size:17px" class="text-center"><a href="product.html"><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p>
+            <!-- <p style="font-size:17px" class="text-center"><a href="product.html"><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p> -->
 
                         </div>
 
@@ -108,36 +111,38 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                         <div class="col-md-2">
 						<img src="images\art\dis\30g.jpg" class="img-responsive" alt="/">
-                        </div>
 
-                        <p style="margin-bottom: 20px">Most Popular</p>
+                      </div>
 
-                        <div class="col-md-2">
-						<img src="images/art/20.jpg" class="img-responsive" alt="/">
-                        </div>
 
-                        <div class="col-md-2">
-						<img src="images/art/22.jpg" class="img-responsive" alt="/">
-                        </div>
+            <div class="title" style="border:1px solid black">
+	              <p  style="margin-bottom: 20px">Most Popular</p>
+
+            </div>
+            <div class="about-section "container"" id="about" style="border:1px solid black">
 
                         <div class="col-md-2">
-						<img src="images/art/24.jpg" class="img-responsive" alt="/">
+						<img src="images\art\pop\5g.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/art/27.jpg" class="img-responsive" alt="/">
+						<img src="images\art\pop\9g.jpg" class="img-responsive" alt="/">
                         </div>
 
                         <div class="col-md-2">
-						<img src="images/art/30.jpg" class="img-responsive" alt="/">
+						<img src="images\art\pop\15g.jpg" class="img-responsive" alt="/">
+                        </div>
+
+                        <div class="col-md-2">
+						<img src="images\art\pop\22g.jpg" class="img-responsive" alt="/">
+                        </div>
+
+                        <div class="col-md-2">
+						<img src="images\art\pop\29g.jpg" class="img-responsive" alt="/">
                         </div>
 
 
 
-
-
-						</div>
-					</div>
 				</div>
 
 
