--- a/very new/shoppingcart.html
+++ b/very new/shoppingcart.html
@@ -76,13 +76,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <p >Shopping Cart</p>
         </div>
         <div class = "mytable" id="line1">
-            <div id="tableTitle">
+            <div id="tableTitle" style="border:1px solid black">
               <div id="tableTitle1" class="col-md-3">piture</div>
               <div id="tableTitle1" class="col-md-3">Name</div>
               <div id="tableTitle2" class="col-md-3">Quantity</div>
               <div id="tableTitle3" class="col-md-3">Price</div>
             </div>
-            <div id="tableLine0">
+            <div id="tableLine0" style="border:1px solid yellow">
               <div id="l0d1" class="col-md-2">piture</div>
               <div id="tableTitle1" class="col-md-2">Name</div>
               <div id="tableTitle2" class="col-md-2">Quantity</div>
@@ -90,6 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
         <div class="total">
+          <p></p>
           <p>Total Price:<label id="total"></label></p>
 
         </div>
