--- a/very new/index.html
+++ b/very new/index.html
@@ -4,6 +4,8 @@
 <title>index</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/myjs.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Campaign Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
@@ -52,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   <li><a href="product.html">Product</a></li>
 				   <li><a href="about.html">About</a></li>
 				   <li><a href="signup.html">Signup</a></li>
-                   <li><a href="shoppingcart.html">Shopping Cart</a></li>
+          <li><a href="shoppingcart.html">Shopping Cart</a></li>
 				  </ul>
 				</div>
 							<!-- script for menu -->
@@ -81,10 +83,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 </div>
 </div>
-<div class="about-section" "container" id="about" style="border:1px solid black">
+<div class="about-section" "container" id="about" style=" height:400px">
 
             <div class="title" >
-	            <p style="margin-bottom: 20px">On Discount</p>
+	            <p >On Discount</p>
 
             </div>
 
@@ -93,7 +95,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="col-md-2" >
 
             <img src="images\art\dis\2g.jpg" class="img-responsive" alt="a">
-            <!-- <p style="font-size:17px" class="text-center"><a href="product.html"><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p> -->
+            <p style="font-size:17px" class="text-center"><a href="product.html"><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p>
 
                         </div>
 
@@ -114,13 +116,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                       </div>
 
+</div>
 
-            <div class="title" style="border:1px solid black">
-	              <p  style="margin-bottom: 20px">Most Popular</p>
+            <div class="about-section "container"" id="about" style="height:400px"">
+              <div class="title" style="border:1px solid black">
+  	              <p  style="margin-bottom: 20px">Most Popular</p>
 
-            </div>
-            <div class="about-section "container"" id="about" style="border:1px solid black">
-
+              </div>
                         <div class="col-md-2">
 						<img src="images\art\pop\5g.jpg" class="img-responsive" alt="/">
                         </div>
