--- a/very new/index.html
+++ b/very new/index.html
@@ -76,7 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-grids">
 <div class="col-md-7 right-grid">
 <h3>Welcome to NZ PAINTING CREATIONS STUDIO</h3>
-<!-- <p align="justify">NZ Painting was established in 1904 with the dream in mind of being able to supply high quality artworks at an affordable price to the public. Currently, our artworks being displayed in over 150 local cafes, restaurants, and show homes around New Zealand. Our dream is to make these beautiful works of art to everyone not only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p> -->
+
 <p>Each single artwork is a masterpiece. </p><p>Our dream is to make these beautiful works of art to everyone not only in New Zealand but all over the world. As we work with a great number of artists, NZ Painting has the advantage of being able to provide high quality artworks in a wide variety of styles at reasonable and affordable prices. Our paintings come under the following categories: Abstract, Christmas, Landscape, Pop art, Portrait, Quote and Text, Sculpture, Split Canvas, Sticker and Still life.</p>
 </div>
 <div class="clearfix"></div>
@@ -85,8 +85,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <div class="about-section" "container" id="about" style=" height:400px">
 
-            <div class="title" >
-	            <p >On Discount</p>
+            <div class="titlePage" >
+	            <p >Promotion</p>
 
             </div>
 
@@ -95,52 +95,72 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="col-md-2" >
 
             <img src="images\art\dis\2g.jpg" class="img-responsive" alt="a">
-            <p style="font-size:17px" class="text-center"><a href="product.html"><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p>
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="promo1">2g</span><br><s>Was :$20.00</s><br> Now :<strong>$16.00</strong></a></p>
 
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\dis\7g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="promo2">2g</span><br><s>Was :$30.00</s><br> Now :<strong>$24.00</strong></a></p>
+
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\dis\16g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="promo3">2g</span><br><s>Was :$40.00</s><br> Now :<strong>$32.00</strong></a></p>
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\dis\20g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="promo4">2g</span><br><s>Was :$50.00</s><br> Now :<strong>$40.00</strong></a></p>
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\dis\30g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="promo5">2g</span><br><s>Was :$60.00</s><br> Now :<strong>$48.00</strong></a></p>
 
                       </div>
 
 </div>
 
-            <div class="about-section "container"" id="about" style="height:400px"">
-              <div class="title" style="border:1px solid black">
+            <div class="about-section "container"" id="about" style="height:400px">
+              <div class="titlePage" >
   	              <p  style="margin-bottom: 20px">Most Popular</p>
 
               </div>
                         <div class="col-md-2">
 						<img src="images\art\pop\5g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="popul1">2g</span><br>Price :<span id="pop1">$48.00</span></a></p>
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\pop\9g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="popul2">2g</span><br>Price :<span id="pop2">$48.00</span></a></p>
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\pop\15g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="popul3">2g</span><br>Price :<span id="pop3">$48.00</span></a></p>
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\pop\22g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="popul4">2g</span><br>Price :<span id="pop4">$48.00</span></a></p>
                         </div>
 
                         <div class="col-md-2">
 						<img src="images\art\pop\29g.jpg" class="img-responsive" alt="/">
+            <p style="font-size:17px" class="text-center">
+              <a href="product.html"><span id="popul5">2g</span><br>Price :<span id="pop5">$48.00</span></a></p>
                         </div>
 
 
